feat: 티켓팅 결과 저장 수정